[Post] Localization - Resolved Issues, Deprecations 추가

--- a/ios/xcode/_posts/2021-10-01-xcode-13.md
+++ b/ios/xcode/_posts/2021-10-01-xcode-13.md
@@ -319,18 +319,14 @@ Xcode의 Keyboard shortcuts는 이제 documentation window에 탭이 두 개 이
 * Xcode는 localization exporting 시 `Info.plist` 파일에서 `NSGKFriendListUsageDescription`, `NSLocationTemporaryUsageDescriptionDictionary` 및 `NSFallDetectionUsageDescription`을 자동으로 추출합니다. (75813015)
 
 ### Resolved Issues
-* Fixed an issue that may have unnecessarily required you to copy content from one localization into a newly added localization. When adding a new localization, you’re no longer required to copy content from a references language if the development language content doesn’t exist. (46222774) (FB5671738)
-
-* Fixed an issue where genstrings extracted all Text*() string literals from SwiftUI code, instead of Text(). (67694778) (FB8524688)
-
-* Fixed an issue where localized strings in XLIFFs with XML character escape sequences failed to import. (68924128) (FB8695129)
-
-* Fixed an issue were Xcode would non-deterministically export content from a project if multiple projects in a workspace had references to the same file. (71859474)
-
-* Fixed an issue where Xcode crashed when importing localizations where localized files existed in a directory within a .lproj directory. (72755034) (FB8958080)
+* 하나의 localization에서 새로 추가된 localization으로 content를 불필요하게 복사해야 하는 문제를 수정했습니다. 새 localization를 추가할 때 development language content가 존재하지 않는 경우 더 이상 references language에서 content를 복사할 필요가 없습니다. (46222774) (FB5671738)
+* `genstrings`가 `Text()` 대신 SwiftUI 코드에서 모든 `Text*()` string literals을 추출하는 문제를 수정했습니다. (67694778) (FB8524688)
+* XML character escape sequences가 ​​있는 `XLIFF`의 localized strings을 가져오지 못하는 문제가 수정되었습니다. (68924128) (FB8695129)
+* workspace의 multiple projects에 동일한 파일에 대한 references가 있는 경우 Xcode가 프로젝트에서 콘텐츠를 비결정적으로 내보내는 문제가 수정되었습니다. (71859474)
+* `.lproj` directory 내의 directory에 localizations 파일이 존재하는 localized files을 가져올 때 Xcode가 충돌하는 문제를 수정했습니다. (72755034) (FB8958080)
 
 ### Deprecations
-* The Localized String SwiftUI Support build setting is deprecated in favor of the new Swift compiler-based string extraction. (80817452)
+* Localized String SwiftUI 지원 build setting은 새로운 Swift compiler-based string extraction을 위해 더 이상 사용되지 않습니다. (80817452)
 
 ## Metal
 ### New Features
