[Post] Metal - New Feature 추가

--- a/ios/xcode/_posts/2021-10-01-xcode-13.md
+++ b/ios/xcode/_posts/2021-10-01-xcode-13.md
@@ -330,23 +330,15 @@ Xcode의 Keyboard shortcuts는 이제 documentation window에 탭이 두 개 이
 
 ## Metal
 ### New Features
-* Metal Debugger now supports Selective Shader Debugging, which allows you to limit the debugging scope for large Compute shaders. This results in much faster shader-debugger session creation and iteration times. (67747242)
-
-* New Capture Controls in Metal Debugger give you precise control to decide which part of your Metal workload to capture, as well as the option to capture multiple frames or scopes. (68219613)
-
-* Metal Debugger now supports importing metallibsym files, which allows you to do Metal shader debugging and profiling in your app without having to embed shader sources in your metallibs. (68942327)
-
-* A GPU Timeline is now available for Apple GPUs in Metal Debugger. Use this timeline to visualize and inspect the parallel execution of Metal GPU commands alongside a curated set of GPU Counters. The timeline gives you additional insight and control over the performance analysis of your app. (69178472)
-
-* Metal Pipeline State Objects are now represented as resources in Metal Debugger, including a brand new viewer for Metal Pipeline States and Metal Libraries as well as GPU Memory accounting for Metal Pipeline States in Metal Debugger’s Memory Viewer. (69377133)
-
-* New Consistent GPU Performance State profiling workflows are now available in Instruments’s Metal System Trace, Metal Debugger in Xcode, and as a brand new Condition Inducer. Consistent GPU Performance State profiling allows you to set your device in a consistent GPU performance state so you can do performance analysis of your apps in a consistent and reliable way. (69404088)
-
-* You can now override the GPU performance state in the Metal System Trace template’s recording options. Instruments also adds a new GPU Performance State track when recording on iOS devices. (69523159)
-
-* Metal Debugger now supports Metal ray tracing, alongside a new advanced Acceleration Structure Viewer. (70112081)
-
-* Metal Application recording settings are now specific to the device being profiled. (74116877)
+* Metal Debugger는 이제 선택적 Shader Debugging을 지원하므로 대규모 Compute shaders의 debugging scope를 제한할 수 있습니다. 이렇게하면 shader-debugger session 생성 및 iteration times이 훨씬 빨라집니다. (67747242)
+* Metal Debugger의 새로운 Capture Controls을 사용하면 Metal workload의 어느 부분을 정확하게 캡처할지 결정할 수 있을 뿐만 아니라 multiple frames 또는 scopes를 capture할 수 있는 옵션을 선택할 수 있습니다. (68219613)
+* Metal Debugger는 이제 `metallibsym` 파일 가져오기를 지원하므로 `metallib`에 shader sources를 포함하지 않고도 앱에서 Metal shader debugging 및 profiling을 수행할 수 있습니다. (68942327)
+* 이제 Metal Debugger에서 Apple GPU에 대한 GPU Timeline을 사용할 수 있습니다. 이 timeline을 사용하여 큐레이션된 GPU Counters set와 함께 Metal GPU commands의 parallel execution을 visualize하고 검사하십시오. timeline을 통해 앱의 성능 분석에 대한 추가적인 insight과 control over을 얻을 수 있습니다. (69178472)
+* Metal Pipeline State Objects는 이제 Metal Debugger의 Memory Viewer에서 Metal Pipeline States 및 Metal Libraries를 위한 새로운 viewer, Metal Pipeline States를 설명하는 GPU Memory를 포함하여 Metal Debugger에서 resources로 표현됩니다. (69377133)
+* 새로운 Consistent GPU Performance State profiling workflows는 이제 Instruments의 Metal System Trace, Xcode의 Metal Debugger 및 새로운 Condition Inducer에서 사용할 수 있습니다. Consistent GPU Performance State profiling을 통해 device를 consistent GPU performance state로 설정할 수 있으므로 일관성있고 안정적인 방법으로 앱의 performance analysis을 수행할 수 있습니다. (69404088)
+* 이제 Metal System Trace template의 recording 옵션에서 GPU performance state를 override할 수 있습니다. Instruments는 또한 iOS devices에서 recording 시 새로운 GPU Performance State track을 추가합니다. (69523159)
+* Metal Debugger는 이제 새로운 고급 Acceleration Structure Viewer와 함께 Metal ray tracing을 지원합니다. (70112081)
+* 이제 Metal Application recording settings이 profiled되는 device에만 적용됩니다. (74116877)
 
 ### Resolved Issues
 * Metal Shader Validation has been extended to support the following new Metal APIs: Indirect Command Buffers, Dynamic Libraries, Function Pointers, Visible Function Tables, and Pull Model Interpolation. (78491579)
