--- a/ios/xcode/_posts/2021-10-01-xcode-13.md
+++ b/ios/xcode/_posts/2021-10-01-xcode-13.md
@@ -341,10 +341,10 @@ Xcode의 Keyboard shortcuts는 이제 documentation window에 탭이 두 개 이
 * 이제 Metal Application recording settings이 profiled되는 device에만 적용됩니다. (74116877)
 
 ### Resolved Issues
-* Metal Shader Validation has been extended to support the following new Metal APIs: Indirect Command Buffers, Dynamic Libraries, Function Pointers, Visible Function Tables, and Pull Model Interpolation. (78491579)
+* Metal Shader Validation이 다음과 같은 새로운 Metal API를 지원하도록 확장되었습니다: Indirect Command Buffers, Dynamic Libraries, Function Pointers, Visible Function Tables, and Pull Model Interpolation. (78491579)
 
 ### Deprecations
-* TextureTool is now deprecated. Transition your texture compression workflow to use the new TextureConverter tool instead. TextureConverter offers a full range of texture compression formats and gives you more control over your compression pipeline. (73370277)
+* TextureTool은 deprecated 되었습니다. 대신 새로운 TextureConverter tool을 사용하도록 texture compression workflow를 전환하십시오. TextureConverter는 전체 범위의 texture compression formats을 제공하며 compression pipeline을 보다 효과적으로 제어할 수 있습니다. (73370277)
 
 ## Organizer
 ### New Features
