[Post] Organizer 추가

--- a/ios/xcode/_posts/2021-10-01-xcode-13.md
+++ b/ios/xcode/_posts/2021-10-01-xcode-13.md
@@ -348,29 +348,18 @@ Xcode의 Keyboard shortcuts는 이제 documentation window에 탭이 두 개 이
 
 ## Organizer
 ### New Features
-* Xcode now delivers crash reports in near real time, with longer data retention. Xcode aggregates crash logs by crash signature (“Crash Point”), in a list sorted by unique devices affected. Aggregated Crash Point data is now available for the past year. For any list filter selection, the Crashes Organizer shows a list of up to 1,000 possible Crash Points. Additionally, the new View > Reload Organizer menu item reloads the content in the Organizer. (54901702)
-
-* Xcode now delivers crash reports with more filtering capabilities and more statistics. You can query the ranked list of top Crash Points by the following filter criteria: time period (Last Day, Last Two Weeks, Last Year), any version or a specific historical app version, any build or a specific historical app build, product type like App Clip, app extension, watchOS app, or main app, installation destination like iOS, macOS, or watchOS, and release history for TestFlight, App Store, or both. You can view crash statistics in three new dimensions: time period (Last Day, Last Year), app version, and release history. The time series data in the graph area shows unique devices affected by-hour for the last 24 hours and by-month for the last year. In addition, Xcode crash reporting now supports apps distributed on TestFlight for macOS. (78882594)
-
-* You can now share crash reports by URL. A new button allows sharing of a Crash Point URL. Clicking on a Crash Point URL allows any developer with access to the app to view the Crash Point in the Organizer. (78882655)
-
-* Xcode now shows the TestFlight Feedback for your crashing issues to give better insight into what went wrong. TestFlight Crash Feedback is now viewable in the new TestFlight Feedback Inspector for any selected Crash Point. When viewing TestFlight Crash Feedback in Safari, a new “Open in Xcode” allows opening the Crash Point in the Xcode Organizer. (78882718)
-
-* You can now filter the Energy reports list based on any specific historical app version, any specific historical app build, product type like App Clip, app extension, or main app, and release history for TestFlight or App Store. (78882776)
-
-* New Scroll Hitch Goals in the Xcode Organizer make it easy to analyze the scrolling experience for a version of an app. The bars in the chart appear in red, yellow, or green, depending on the goal level into which they fall. Each color associates with a key to the right of the chart; the key provides more information about the thresholds for each goal level. (62735038)
-
-* When you’re viewing metrics for your app, you now have the option to view metrics for your app’s App Clip. Select the App Clip filtering option to view your App Clip metrics data. (63915380)
-
-* The new Terminations metric in the Xcode Organizer shows foreground and background terminations, broken down by reason. This organization provides granular information about the most prevalent causes of termination for a given app. (64376250)
-
-* Historical data in the Xcode Organizer now shows up to 16 of an app’s latest versions for each metric chart, providing the performance trend of an app over a larger window of time. (64382966)
-
-* Now when you view a metric, the inspector shows your app’s release date information. (64995828)
-
-* Qualitative Insights for Disk Write Reports in the Xcode Organizer show new information called Insights in the inspector. These insights include optimizations to help reduce the Disk Writes in the app. (66926840)
-
-* Smart Insights are now available in the Xcode Organizer to help you discover your app’s power and performance regressions faster than before. For more information, see Analyzing the Performance of Your Shipping App. (71420981)
+* 이제 Xcode는 데이터 보존 시간이 길어졌으며, 거의 real time으로 crash reports를 제공합니다. Xcode는 영향을 받는 unique devices로 정렬된 목록에서 crash signature("충돌 지점")별로 crash logs를 집계합니다. 지난 1년~현재까지의 Aggregated Crash Point data를 사용할 수 있습니다. any list filter selection을 선택할 경우 Crashes Organizer에는 최대 1,000개의 Crash Points이 표시됩니다. Additionally, 또한 new View > Reload Organizer 메뉴 항목은 Organizer의 content를 다시 로드합니다. (54901702)
+* Xcode는 이제 더 많은 filtering 기능과 더 많은 통계를 포함한 crash reports를 제공합니다. 기간(지난 날, 지난 2주, 작년), 모든 버전 또는 특정 기록 app version, 모든 build 또는 특정 기록 app build, 제품 유형과 같은 필터 기준으로 top Crash Points의 순위 목록을 쿼리할 수 있습니다. App Clip, app extension, App Store 또는 TestFlight에서 release 된 설치 가능한 watchOS app 또는 main app, iOS, macOS 또는 watchOS. 다음 세 가지 새로운 관점으로 crash 통계를 볼 수 있습니다. 기간(Last Day, Last Year), app version 및 release history. graph area의 time series data는 last 24 hours, by-month, last year의 영향을 받은 unique devices를 보여줍니다. 또한 Xcode crash reporting은 이제 macOS용 TestFlight에 배포된 앱을 지원합니다. (78882594)
+* 이제 URL로 crash reports를 공유할 수 있습니다. 새로운 버튼으로 Crash Point URL을 공유할 수 있습니다. Crash Point URL을 클릭하면 앱에 액세스할 수 있는 모든 개발자가 Organizer에서 Crash Point를 볼 수 있습니다. (78882655)
+* 이제 Xcode는 crashing issues에 대한 TestFlight Feedback을 표시하여 무엇이 잘못되었는지 더 잘 파악할 수 있도록 합니다. TestFlight Crash Feedback 은 이제 선택한 모든 Crash Point에 대한 새로운 TestFlight Feedback Inspector에서 볼 수 있습니다. Safari에서 TestFlight 충돌 피드백을 볼 때 새로운 "Open in Xcode"를 통해 Xcode Organizer에서 Crash Point를 열 수 있습니다. (78882718)
+* 이제 특정 기록 앱 버전, 특정 기록 앱 빌드, App Clip, app extension 또는 main app과 같은 제품 유형, TestFlight 또는 App Store의 release history을 기반으로 Energy reports 목록을 필터링할 수 있습니다. (78882776)
+* Xcode Organizer의 새로운 Scroll Hitch Goals를 사용하면 앱 버전의 스크롤 경험을 쉽게 분석할 수 있습니다. chart의 bars는 해당하는 목표 수준에 따라 red, yellow 또는 green으로 표시됩니다. 각 color는 chart 오른쪽의 key와 연결됩니다; 키는 각 goal level의 임계값에 대한 자세한 정보를 제공합니다. (62735038)
+* 앱에 대한 metrics을 볼 때 이제 앱의 App Clip에 대한 metrics을 볼 수 있는 옵션이 제공됩니다. App Clip metrics data를 보려면 App Clip filtering option을 선택합니다. (63915380)
+* Xcode Organizer의 새로운 Terminations metric는 foreground 및 background terminations를 각 사유별 구분하여 보여줍니다. 이 organization은 특정 앱의 가장 일반적인 termination 원인에 대한 세부 정보를 제공합니다. (64376250)
+* Xcode Organizer의 기록 데이터는 이제 각 metric chart에 대해 최대 16개의 app의 latest versions을 표시하여 더 광범위한 앱의 성능 추세를 제공합니다. (64382966)
+* 이제 metric항목을 볼 때 inspector에 앱의 release date 정보가 표시됩니다. (64995828)
+* Xcode Organizer의 Disk Write Reports에 대한 Qualitative Insights은 Insights in the inspector에서 Insights이라는 새로운 정보를 보여줍니다. 이러한 insights에는 앱의 Disk Writes를 줄이는 데 도움이 되는 optimizations이 포함됩니다. (66926840)
+* 이제 Xcode Organizer에서 Smart Insights를 사용하여 이전보다 더 빠른 앱의 성능, 성능 회귀를 발견할 수 있습니다. 자세한 내용은 [<i class="fas fa-link"></i> Analyzing the Performance of Your Shipping App](https://developer.apple.com/documentation/Xcode/analyzing-the-performance-of-your-shipping-app#Read-Data-for-Smart-Insights){:target="_blank"}을 참조하십시오. (71420981)
 
 ## Playgrounds
 ### Known Issues
