[Post] Playgrounds 추가

--- a/ios/xcode/_posts/2021-10-01-xcode-13.md
+++ b/ios/xcode/_posts/2021-10-01-xcode-13.md
@@ -363,11 +363,11 @@ Xcode의 Keyboard shortcuts는 이제 documentation window에 탭이 두 개 이
 
 ## Playgrounds
 ### Known Issues
-* Importing the TabularData framework in an Xcode Playground targeting macOS may result in missing symbols. (77162151)
+* macOS를 대상으로 하는 Xcode Playground에서 TabularData framework를 Importing하면 symbols가 누락될 수 있습니다. (77162151)
 
-  Workaround: If your use case permits, set the playground’s platform to iOS.
+  해결 방법: 가능한 경우 Playground의 platform을 iOS로 설정합니다.
 
-* Xcode Playgrounds don’t support Swift Concurrency language constructs. (79408099)
+* Xcode Playgrounds는 Swift Concurrency language 구성을 지원하지 않습니다. (79408099)
 
 ## Previews
 ### New Features
