[Post] Previews 추가

--- a/ios/xcode/_posts/2021-10-01-xcode-13.md
+++ b/ios/xcode/_posts/2021-10-01-xcode-13.md
@@ -371,10 +371,10 @@ Xcode의 Keyboard shortcuts는 이제 documentation window에 탭이 두 개 이
 
 ## Previews
 ### New Features
-* Previews now supports inspecting a view’s accessibility elements while previewing the view. This support requires macOS 12. (78297929)
+* 이제 Previews에서 view를 previewing 하는 동안 view들의 accessibility elements 검사를 지원합니다. 이 지원에는 macOS 12가 필요합니다. (78297929)
 
 ### Deprecations
-* Xcode 13 no longer includes a menu item in the Previews canvas for debugging a preview. Instead, use the Debug > Attach to Process menu item to attach the debugger to your previewed app. (73981969)
+* Xcode 13은 더 이상 preview debugging을 위한 Previews canvas에 menu item을 포함하지 않습니다. 대신 Debug > Attach to Process menu item 항목을 사용하여 previewed app에 debugger를 연결합니다. (73981969)
 
 ## Project Navigator
 ### New Features
