[Post] Project Navigator 추가

--- a/ios/xcode/_posts/2021-10-01-xcode-13.md
+++ b/ios/xcode/_posts/2021-10-01-xcode-13.md
@@ -366,7 +366,6 @@ Xcode의 Keyboard shortcuts는 이제 documentation window에 탭이 두 개 이
 * macOS를 대상으로 하는 Xcode Playground에서 TabularData framework를 Importing하면 symbols가 누락될 수 있습니다. (77162151)
 
   해결 방법: 가능한 경우 Playground의 platform을 iOS로 설정합니다.
-
 * Xcode Playgrounds는 Swift Concurrency language 구성을 지원하지 않습니다. (79408099)
 
 ## Previews
@@ -378,11 +377,9 @@ Xcode의 Keyboard shortcuts는 이제 documentation window에 탭이 두 개 이
 
 ## Project Navigator
 ### New Features
-* The project navigator hides the Products group when it’s in the default location. The Product > Show Build Folder in Finder menu item replaces the most common use. (71561549)
-
-* The Move Focus to Editor command now interprets vim directional movement keys. (71754671) (FB8918700)
-
-* The scheme editing sheet no longer has a maximum size. (73158957) (FB8969432)
+* project navigator는 default location에 있을 때 Products group을 숨깁니다. Product > Show Build Folder 메뉴 항목이 가장 일반적인 사용을 대체합니다. (71561549)
+* 이제 Move Focus to Editor command을 통해 vim 방향 이동 키를 해석합니다. (71754671) (FB8918700)
+* scheme editing sheet의 maximum size가 더 이상 없습니다. (73158957) (FB8969432)
 
 ### Resolved Issues
 * Fixed an issue where searching through a build log using Command-F would cause Xcode to crash. (52943982)
