[Post] Project Navigator - Resolved Issues 추가

--- a/ios/xcode/_posts/2021-10-01-xcode-13.md
+++ b/ios/xcode/_posts/2021-10-01-xcode-13.md
@@ -382,13 +382,10 @@ Xcode의 Keyboard shortcuts는 이제 documentation window에 탭이 두 개 이
 * scheme editing sheet의 maximum size가 더 이상 없습니다. (73158957) (FB8969432)
 
 ### Resolved Issues
-* Fixed an issue where searching through a build log using Command-F would cause Xcode to crash. (52943982)
-
-* By default, the project navigator hides file extensions and document tab titles. Configure this behavior in Xcode’s general preferences. (71203294)
-
-* Fixed the indentation of wireless devices in the run destination menu. (72926304) (FB8964983)
-
-* Moving large folders in Xcode is faster. (77217929)
+* `Command-F`를 사용하여 build log를 검색하면 Xcode가 crash issue가 수정되었습니다. (52943982)
+* 기본적으로 project navigator는 파일 확장자와 document tab titles을 숨깁니다. Xcode의 general preferences에서 이 동작을 구성하십시오. (71203294)
+* run destination menu에서 무선 devices의 들여쓰기를 수정했습니다. (72926304) (FB8964983)
+* Xcode에서 큰 폴더를 이동하는 것이 더 빠릅니다. (77217929)
 
 ## Sanitizers
 ### Resolved Issues
