[Post] Sanitizers 추가

--- a/ios/xcode/_posts/2021-10-01-xcode-13.md
+++ b/ios/xcode/_posts/2021-10-01-xcode-13.md
@@ -389,11 +389,9 @@ Xcode의 Keyboard shortcuts는 이제 documentation window에 탭이 두 개 이
 
 ## Sanitizers
 ### Resolved Issues
-* Undefined Behavior Sanitizer can sanitize pre- and post-increment and decrement of types with a bit width smaller than int. (60943408)
-
-* Fixed an issue on Macs with Apple silicon where memory allocation might fail while running with Address Sanitizer enabled. (75302812)
-
-* Resolved an issue in macOS 12 where Thread Sanitizer might cause programs to crash or report false positives. (78319076)
+* Undefined Behavior Sanitizer는 bit width가`int`보다 작은 형식의 증감 전/후를 처리할 수 있습니다. (60943408)
+* Address Sanitizer가 활성화된 상태에서 실행하는 동안 memory allocation이 실패할 수 있는 Apple 실리콘에 설치된 있는 Mac의 문제를 수정했습니다. (75302812)
+* Thread Sanitizer로 인해 프로그램이 crash되거나 잘못된 report를 보고하는 macOS 12의 문제가 해결되었습니다. (78319076)
 
 ## Signing and Distribution
 ### New Features
