[Post] Signing and Distribution 추가

--- a/ios/xcode/_posts/2021-10-01-xcode-13.md
+++ b/ios/xcode/_posts/2021-10-01-xcode-13.md
@@ -395,39 +395,34 @@ Xcode의 Keyboard shortcuts는 이제 documentation window에 탭이 두 개 이
 
 ## Signing and Distribution
 ### New Features
-* xcodebuild now supports the use of App Store Connect API keys for authentication with the Apple Developer website. This enables the use of automatic signing via xcodebuild in headless environments, such as build machines and continuous integration setups. To use API keys with xcodebuild, create an API key on App Store Connect and pass the key along with its identifier and your team’s issuer identifier to xcodebuild using the new parameters authenticationKeyPath, authenticationKeyID, and authenticationKeyIssuerID, respectively. When creating a key, you can assign it a role to control its permissions for performing automatic signing tasks. To learn more about creating and managing keys, see Creating API Keys for App Store Connect API. (51444716)
+* `xcodebuild`는 이제 Apple Developer websited에서 인증을 위해 App Store Connect API keys 사용을 지원합니다. 이를 통해 build machines 및 continuous integration setup과 같은 headless environments에서 `xcodebuild`를 통한 automatic signing을 사용할 수 있습니다. `xcodebuild`에서 API 키를 사용하려면 [<i class="fas fa-link"></i> App Store Connect](https://appstoreconnect.apple.com/access/api){:target="_blank"}에서 API key를 생성하고 새로운 parameters인 `authenticationKeyPath`, `authenticationKeyID` 및 `authenticationKeyIssuerID`를 각각 사용하여 해당 identifier 및 team’s issuer identifier와 함께 key를 `xcodebuild`에 전달합니다. 키를 생성할 때 역할을 할당하여 자동 서명 작업을 수행하기 위한 권한을 제어할 수 있습니다. 키를 생성할 때 role을 할당하여 automatic signing tasks을 수행하기 위한 permissions을 제어할 수 있습니다. 키 생성 및 관리에 대한 자세한 내용은 [<i class="fas fa-link"></i> Creating API Keys for App Store Connect API](https://developer.apple.com/documentation/appstoreconnectapi/creating_api_keys_for_app_store_connect_api){:target="_blank"}를 참조하십시오. (51444716)
+* 이제 Xcode는 새 앱을 App Store Connect에 처음 업로드할 때 app record를 생성하도록 제안합니다. 앱 레코드를 생성하기 전에 Xcode의 distribution assistant내에서 App의 name, primary langua 및 `SKU`를 직접 구성할 수 있습니다. (57572562) (FB7476283)
+* App Store Connect에 앱을 업로드할 때 Xcode의 distribution assistant는 앱에 유효한 빌드 번호(CFBundleVersion)가 있는지 감지합니다. 앱에 잘못된 번호(예: 이전에 사용되었거나 현재 빌드 번호보다 앞선 번호)가 있는 경우 distribution assistant는 자동으로 번호를 유효한 번호로 증가시키는 옵션을 제공합니다. 또한 distribution assistant는 앱에 포함된 모든 콘텐츠(예: such as app extensions, App Clips, or watchOS apps)의 빌드 번호가 앱과 동기화되도록 합니다. 이것은 source code나 archive를 수정하지 않습니다; Xcode는 앱을 packaging하고 App Store Connect에 업로드하기 전에 앱의 staged copy에서 빌드 번호를 업데이트합니다. (59826409)
+* 이제 Xcode distribution assistant의 Automatic signing이 cloud signing을 지원합니다. cloud signing을 사용하면 Xcode distribution signs는 Apple servers에서 생성 및 관리되는 signing certificates를 사용하여 앱에 signing하므로 Apple ID로 Xcode에 로그인하는 것 외에 local Mac에서 설정할 필요가 없습니다. Cloud signing은 App Store Connect, Ad Hoc, Enterprise 또는 Developer ID distribution에 signing할 때 사용할 수 있습니다. Cloud signing certificates는 Apple 서버에 안전하게 저장됩니다. Mac에서 private key를 전송하거나 저장할 수 없습니다. standard distribution signing certificates와 마찬가지로 cloud signing certificates는 Admin role(또는 Account Holder for Developer ID)이 있는 개발 팀 members만 액세스할 수 있습니다. App Store Connect(Users and Access)를 사용하여 다른 roles을 가진 users에 대한 permissions을 설정합니다. cloud signing certificates를 저장하거나 팀의 다른 개발자와 공유할 필요가 없습니다. 필요한 permissions이 있는 모든 팀원이 cloud signing을 통해 distribution으로 signing할 수 있기 때문입니다. Mac에 유효한 distribution signing certificate와 일치하는 provisioning profile이 이미 설치되어 있는 경우 cloud signing을 사용하지 않고 로컬로 signing합니다. 또한 manual distribution signing을 사용할 때는 cloud signing을 사용할 수 없습니다. (70706409)
 
-* Xcode now offers to create an app record the first time you upload a new app to App Store Connect. Before creating the app record, you can configure the name, primary language, and SKU for your app directly within Xcode’s distribution assistant. (57572562) (FB7476283)
+* Xcode 13은 Mac에서 TestFlight용 apps provisioning을 지원합니다. macOS 앱이 TestFlight에 적용되려면 provisioning profiles가 포함되어야 합니다. Mac 앱을 App Store Connect에 업로드하고 distribution assistant에서 automatic signing을 사용하면 assistant가 앱에 provisioning profiles를 자동으로 포함합니다. manual distribution signing을 사용하는 경우 Apple Developer website에서 provisioning profiles을 만든 다음 distribution assistant의 manual distribution signing section을 선택합니다. (72824383)
 
-* When uploading an app to App Store Connect, the distribution assistant in Xcode detects whether your app has a valid build number (CFBundleVersion). If your app has an invalid number (like one that was used previously, or precedes your current build number), the distribution assistant provides an option to automatically increment it to a valid number. In addition, the distribution assistant ensures that the build numbers of all embedded content in your app (such as app extensions, App Clips, or watchOS apps) are in sync with your app. Note that this doesn’t modify your source code or your archive; Xcode updates the build number in a staged copy of your app before packaging and uploading it to App Store Connect. (59826409)
-
-* Automatic signing in the Xcode distribution assistant now supports cloud signing. With cloud signing, Xcode distribution signs your app using signing certificates created and managed on Apple servers, requiring no setup on your local Mac other than signing in to Xcode with your Apple ID. Cloud signing is available when signing for App Store Connect, Ad Hoc, Enterprise, or Developer ID distribution. Cloud signing certificates are stored securely on Apple servers; you can’t transmit or store the private key on your Mac. Similar to standard distribution signing certificates, cloud signing certificates are accessible only to members of your development team with the Admin role (or Account Holder for Developer ID). Use App Store Connect (Users and Access) to set permissions for users with other roles. You don’t need to save or share cloud signing certificates with other developers on your team, as any team member with the necessary permissions can sign them for distribution with cloud signing. If you already have a valid distribution signing certificate and matching provisioning profiles installed on your Mac, Xcode uses those and signs locally rather than using cloud signing. Additionally, cloud signing isn’t available when using manual distribution signing. (70706409)
-
-* Xcode 13 supports provisioning apps for TestFlight on Mac. For your macOS app to be eligible for TestFlight, it must include provisioning profiles. When you upload your Mac app to App Store Connect and use automatic signing in the distribution assistant, the assistant automatically includes the provisioning profiles in your app. If you use manual distribution signing, create provisioning profiles on the Apple Developer website and then select them in the manual distribution signing section of the distribution assistant. (72824383)
-
-* You may now use notarytool on the command line to interact with the Apple notary service. For a full description see the manual page with man notarytool or view available commands with xcrun notarytool --help. For more information about custom notarization workflows, see Customizing the Notarization Workflow. (78516542)
+* 이제 command line에서 `notarytool`을 사용하여 Apple notary service와 상호 작용할 수 있습니다. 전체 설명은 `man notarytool`이 있는 매뉴얼 페이지를 참조하거나 `xcrun notarytool --help`로 사용 가능한 명령을 확인하십시오. custom notarization workflows에 대한 자세한 내용은 [<i class="fas fa-link"></i> Customizing the Notarization Workflow](https://developer.apple.com/documentation/security/notarizing_macos_software_before_distribution/customizing_the_notarization_workflow){:target="_blank"}을 참조하십시오. (78516542)
 
 ### Resolved Issues
-* Resolved an issue where automatic signing was unable to repair provisioning profiles for apps that use Cloud Containers, App Groups, or Apple Pay Merchant Identifiers if your account has the Developer role. (30185440) (FB5641770)
-
-* Resolved an issue in which Xcode fails to codesign using a smart card. (58266781) (FB7516556)
-
-* Fixed an issue where Xcode failed to sign a universal Mac Catalyst framework if it was built with bitcode. (71599193)
+* 계정에 Developer role인 경우 automatic signing이 Cloud Containers, App Groups, or Apple Pay Merchant Identifiers를 사용하는 앱의 provisioning profiles을 복구할 수 없는 문제를 해결했습니다. (30185440) (FB5641770)
+* Xcode가 smart card를 사용하여 codesign에 실패하는 문제를 해결했습니다. (58266781) (FB7516556)
+* bitcode로 만들어진 universal Mac Catalyst framework 인 경우 Xcode가 sign하지 못하는 문제를 수정했습니다. (71599193)
 
 ### Known Issues
-* Running notarytool submit with large .zip files may result in notarytool permanently hanging. (78513932)
+* 큰 `.zip` 파일과 함께 `notarytool` submit을 실행하면 `notarytool`이 영구적으로 중단될 수 있습니다. (78513932)
 
-  Workaround: Submit your app as a .pkg or .dmg, submit several small .zip files, or use altool.
+  해결 방법: 앱을 `.pkg` 또는 `.dmg`로 제출하거나 여러 개의 작은 `.zip` 파일을 제출하거나 `altool`을 사용합니다.
 
-* If you don’t have permission to use a cloud certificate’s type, signing with that certificate fails and presents an error of “<VALID_CERT_TYPE>_Managed is unknown”, even though the certificate type is known. (78538221)
+* cloud certificate서 type을 사용할 수 있는 permission이 없는 경우 해당 certificate로 signing할 수 없으며 certificate type을 알고 있더라도 "<VALID_CERT_TYPE>_Managed is unknown" 오류가 표시됩니다. (78538221)
 
-* Xcode may incorrectly try to reuse a build number during the distribution workflow when App Store Connect rejects a build after upload. (78838509)
+* Xcode는 App Store Connect가 업로드 후 빌드 reject 시 distribution workflow 중에 build number를 잘못 재사용하려고 할 수 있습니다. (78838509)
 
-  Workaround: Manually increment your app’s build number before rebuilding.
+  해결 방법: 다시 빌드하기 전에 앱의 build number를 수동으로 늘리십시오.
 
-* Xcode doesn’t correctly re-sign watchOS apps when exporting them using local signing from the Organizer in macOS 11. (82944652)
+* macOS 11의 Organizer에서 local signing을 사용하여 내보낼 때 Xcode가 watchOS 앱에 올바르게 다시 re-sign하지 않습니다. (82944652)
 
-  Workaround: Export the app using cloud signing, or export in macOS 12.
+  해결 방법: cloud signing을 사용하여 앱을 내보내거나 macOS 12에서 내보냅니다.
 
 ## Simulator
 ### Known Issues
