[Post] Simulator 추가

--- a/ios/xcode/_posts/2021-10-01-xcode-13.md
+++ b/ios/xcode/_posts/2021-10-01-xcode-13.md
@@ -18,7 +18,7 @@ depth:
     url: /ios/xcode/
     icon: "far fa-folder-open"
 ---
-저만 보려고👀 구글 번역기로 돌린 발번역입니다.
+구글 번역기로 돌린 번역입니다. 잘못된 오역이 있음을 주의하여 주세요.👀
 
 # Xcode 13
 Xcode 13에는 Swift 5.5와 iOS 15, iPadOS 15, macOS Monterey, tvOS 15, watchOS 8용 SDK가 포함되어 있습니다.
@@ -399,9 +399,7 @@ Xcode의 Keyboard shortcuts는 이제 documentation window에 탭이 두 개 이
 * 이제 Xcode는 새 앱을 App Store Connect에 처음 업로드할 때 app record를 생성하도록 제안합니다. 앱 레코드를 생성하기 전에 Xcode의 distribution assistant내에서 App의 name, primary langua 및 `SKU`를 직접 구성할 수 있습니다. (57572562) (FB7476283)
 * App Store Connect에 앱을 업로드할 때 Xcode의 distribution assistant는 앱에 유효한 빌드 번호(CFBundleVersion)가 있는지 감지합니다. 앱에 잘못된 번호(예: 이전에 사용되었거나 현재 빌드 번호보다 앞선 번호)가 있는 경우 distribution assistant는 자동으로 번호를 유효한 번호로 증가시키는 옵션을 제공합니다. 또한 distribution assistant는 앱에 포함된 모든 콘텐츠(예: such as app extensions, App Clips, or watchOS apps)의 빌드 번호가 앱과 동기화되도록 합니다. 이것은 source code나 archive를 수정하지 않습니다; Xcode는 앱을 packaging하고 App Store Connect에 업로드하기 전에 앱의 staged copy에서 빌드 번호를 업데이트합니다. (59826409)
 * 이제 Xcode distribution assistant의 Automatic signing이 cloud signing을 지원합니다. cloud signing을 사용하면 Xcode distribution signs는 Apple servers에서 생성 및 관리되는 signing certificates를 사용하여 앱에 signing하므로 Apple ID로 Xcode에 로그인하는 것 외에 local Mac에서 설정할 필요가 없습니다. Cloud signing은 App Store Connect, Ad Hoc, Enterprise 또는 Developer ID distribution에 signing할 때 사용할 수 있습니다. Cloud signing certificates는 Apple 서버에 안전하게 저장됩니다. Mac에서 private key를 전송하거나 저장할 수 없습니다. standard distribution signing certificates와 마찬가지로 cloud signing certificates는 Admin role(또는 Account Holder for Developer ID)이 있는 개발 팀 members만 액세스할 수 있습니다. App Store Connect(Users and Access)를 사용하여 다른 roles을 가진 users에 대한 permissions을 설정합니다. cloud signing certificates를 저장하거나 팀의 다른 개발자와 공유할 필요가 없습니다. 필요한 permissions이 있는 모든 팀원이 cloud signing을 통해 distribution으로 signing할 수 있기 때문입니다. Mac에 유효한 distribution signing certificate와 일치하는 provisioning profile이 이미 설치되어 있는 경우 cloud signing을 사용하지 않고 로컬로 signing합니다. 또한 manual distribution signing을 사용할 때는 cloud signing을 사용할 수 없습니다. (70706409)
-
 * Xcode 13은 Mac에서 TestFlight용 apps provisioning을 지원합니다. macOS 앱이 TestFlight에 적용되려면 provisioning profiles가 포함되어야 합니다. Mac 앱을 App Store Connect에 업로드하고 distribution assistant에서 automatic signing을 사용하면 assistant가 앱에 provisioning profiles를 자동으로 포함합니다. manual distribution signing을 사용하는 경우 Apple Developer website에서 provisioning profiles을 만든 다음 distribution assistant의 manual distribution signing section을 선택합니다. (72824383)
-
 * 이제 command line에서 `notarytool`을 사용하여 Apple notary service와 상호 작용할 수 있습니다. 전체 설명은 `man notarytool`이 있는 매뉴얼 페이지를 참조하거나 `xcrun notarytool --help`로 사용 가능한 명령을 확인하십시오. custom notarization workflows에 대한 자세한 내용은 [<i class="fas fa-link"></i> Customizing the Notarization Workflow](https://developer.apple.com/documentation/security/notarizing_macos_software_before_distribution/customizing_the_notarization_workflow){:target="_blank"}을 참조하십시오. (78516542)
 
 ### Resolved Issues
@@ -413,34 +411,28 @@ Xcode의 Keyboard shortcuts는 이제 documentation window에 탭이 두 개 이
 * 큰 `.zip` 파일과 함께 `notarytool` submit을 실행하면 `notarytool`이 영구적으로 중단될 수 있습니다. (78513932)
 
   해결 방법: 앱을 `.pkg` 또는 `.dmg`로 제출하거나 여러 개의 작은 `.zip` 파일을 제출하거나 `altool`을 사용합니다.
-
 * cloud certificate서 type을 사용할 수 있는 permission이 없는 경우 해당 certificate로 signing할 수 없으며 certificate type을 알고 있더라도 "<VALID_CERT_TYPE>_Managed is unknown" 오류가 표시됩니다. (78538221)
-
 * Xcode는 App Store Connect가 업로드 후 빌드 reject 시 distribution workflow 중에 build number를 잘못 재사용하려고 할 수 있습니다. (78838509)
 
   해결 방법: 다시 빌드하기 전에 앱의 build number를 수동으로 늘리십시오.
-
 * macOS 11의 Organizer에서 local signing을 사용하여 내보낼 때 Xcode가 watchOS 앱에 올바르게 다시 re-sign하지 않습니다. (82944652)
 
   해결 방법: cloud signing을 사용하여 앱을 내보내거나 macOS 12에서 내보냅니다.
 
 ## Simulator
 ### Known Issues
-* Shazam Catalog recognition doesn’t work in simulated devices. (77564423)
+* Shazam Catalog 인식은 simulated devices에서 작동하지 않습니다. (77564423)
 
-  Workaround: Use a physical device.
+  해결 방법: physical device를 사용합니다.
+* music requests이 있는 content 로드와 같은 [<i class="fas fa-link"></i> MusicKit](https://developer.apple.com/documentation/MusicKit) 기능은 simulated devices에서 작동하지 않습니다. (78559381)
 
-* MusicKit functionality, such as loading content with music requests, doesn’t work in simulated devices. (78559381)
+  해결 방법: physical device에서 앱의 MusicKit 기능을 테스트합니다.
+* Simulated iPhone mini devices는 부분적인 화면 업데이트를 잘못 렌더링하여 visual 결함을 일으킬 수 있습니다. (82423740) (FB9569039)
 
-  Workaround: Test your app’s MusicKit functionality on a physical device.
+  해결 방법: 미니가 아닌 simulated device를 사용합니다.
+* simulated watchOS devices의 Always On 모드에서 콘텐츠가 업데이트되면 일부 콘텐츠가 사라지거나 시각적 artifacts가 나타날 수 있습니다. (82732227)
 
-* Simulated iPhone mini devices might incorrectly render partial screen updates resulting in visual glitches. (82423740) (FB9569039)
-
-  Workaround: Use a non-mini simulated device.
-
-* Some content may disappear or visual artifacts may appear when the content updates in Always On mode in simulated watchOS devices. (82732227)
-
-  Workaround: Test on device to confirm Always On behavior.
+  해결 방법: device에서 테스트하여 Always On 동작을 확인합니다.
 
 ## Source Control
 ### New Features
