[Post] 소개페이지 링크 추가

--- a/ios/xcode/_posts/2021-10-01-xcode-13.md
+++ b/ios/xcode/_posts/2021-10-01-xcode-13.md
@@ -20,6 +20,8 @@ depth:
 ---
 구글 번역기로 돌린 번역입니다. 잘못된 오역이 있음을 주의하여 주세요.👀
 
+[<i class="fas fa-link"></i> Xcode 13 소개 페이지](https://developer.apple.com/kr/xcode/){:target="_blank"}
+
 # Xcode 13
 Xcode 13에는 Swift 5.5와 iOS 15, iPadOS 15, macOS Monterey, tvOS 15, watchOS 8용 SDK가 포함되어 있습니다.
 
