--- a/ios/xcode/_posts/2021-10-01-xcode-13.md
+++ b/ios/xcode/_posts/2021-10-01-xcode-13.md
@@ -438,45 +438,45 @@ Xcode의 Keyboard shortcuts는 이제 documentation window에 탭이 두 개 이
 
 ## Source Control
 ### New Features
-* You can now create, review, and merge pull requests using Xcode’s source control features, when signed into a GitHub or Bitbucket Server account. (62934369)
+* 이제 GitHub 또는 Bitbucket Server 계정에 로그인하면 Xcode’s source control을 사용하여 create, review, and merge pull requests를 할 수 있습니다. (62934369)
 
-* You can now enable code review in any editor (or editor split) from the document tab bar, and it shows comparisons in an inline presentation by default. New commit selectors at the bottom of the editor let you customize the diff that’s displayed. (68880112)
+* 이제 document tab bar의 모든 editor(또는 editor split)에서 code review를 활성화할 수 있으며 기본적으로 inline presentation에서 비교를 표시합니다. editor 하단에 있는 New commit selectors를 사용하면 표시되는 diff를 customize할 수 있습니다. (68880112)
 
 ### Resolved Issues
-* Xcode verifies an SSH fingerprint for Source Control operations when a previously trusted fingerprint has changed. (66421452) (FB8234008)
+* 이전에 신뢰할 수 있었던 fingerprint가 변경된 경우 Xcode는 Source Control operations에 대한 SSH fingerprint를 확인합니다. (66421452) (FB8234008)
 
 ### Known Issues
-* Xcode’s pull request feature doesn’t work with forked repositories. You can’t submit pull requests to an upstream repository. (60009682)
+* Xcode의 pull request feature는 forked repositories에서 작동하지 않습니다. upstream repository에 pull requests를 제출할 수 없습니다. (60009682)
 
-  Workaround: Submit pull requests between branches within a single repository instead.
+  해결 방법: 대신 single repository 내의 branches에 pull requests을 제출하십시오.
 
-* When adding a comment to a pull request’s activity view, the layout sometimes visibly re-draws, making the view jump. (75595247)
+* pull request’s activity view에 comment를 추가할 때, layout은 때때로 눈에 띄게 re-draws하기 때문에 뷰가 점프하게 됩니다. (75595247)
 
-* Deleting a pull request from its activity view may not update locally to display the deletion. However, the deletion does take place on the server. (76704508)
+* activity view에서 pull request를 삭제해도 삭제 내용 표시가 로컬에 업데이트되지 않을 수 있습니다. 그러나 삭제는 서버에서 수행됩니다. (76704508)
 
-  Workaround: Close the pull request view. You can also confirm the pull request deletion on your source control provider’s web interface.
+  해결 방법: pull request view를 Close합니다. source control 공급자의 웹 인터페이스에서 pull request 삭제를 확인할 수도 있습니다.
 
-* Creating pull request comments for lines outside of diffs throws an error. (78275800)
+* diff 외부의 라인에 대한 pull request comments을 생성하면 오류가 발생합니다. (78275800)
 
-* Xcode may offer an option to “decline” a pull request hosted on GitHub. This action may not be possible or allowed on a given repository. (78475833)
+* Xcode는 GitHub에서 호스팅되는 pull request를 "decline"하는 옵션을 제공할 수 있습니다. 이 작업은 지정된 repository에서 수행을 할 수 없거나 허용되지 않을 수 있습니다. (78475833)
 
-  Workaround: Use the GitHub website to close the pull request rather than declining it.
+  해결 방법: pull request을 declining하는 대신 GitHub website를 사용하여 pull request을 close하십시오.
 
-* PR code comments may occasionally clip in the PR Activity View. (78484455)
+* PR code comments은 때때로 PR Activity View에서 잘릴 수 있습니다. (78484455)
 
-* When multiple remotes are configured on a repository, the target branch selector in a pull request may not populate with available branches. (78491019)
+* repository에 여러 개의 remotes가 구성된 경우 pull request의 target branch selector가 사용 가능한 branches로 채워지지 않을 수 있습니다. (78491019)
 
-Workaround: Remove remotes other than origin.
+  해결 방법: origin이 아닌 remotes을 제거합니다.
 
-* Adding commits to a PR in Xcode doesn’t update the Changes navigator until you re-launch Xcode. (81229110)
+* Xcode에서 PR에 commits을 추가하면 Xcode를 re-launch할 때까지 Changes navigator가 업데이트되지 않습니다. (81229110)
 
-  Workaround: Re-launch Xcode.
+  해결 방법: Xcode를 다시 실행합니다.
 
-* Creating a new project with a Git repository sometimes fails to initialize a repo. (81874148)
+* Git repository로 new project를 생성하면 repo를 initialize하지 못하는 경우가 있습니다. (81874148)
 
-  Workaround: Remove the hidden .git folder from the root level of the project folder, add author name and email address in the Source Control preferences tab in Xcode, and create a new Git repository from the Source Control menu in Xcode.
+  해결 방법: project folder의 root level에서 숨겨진 .git 폴더를 제거하고 Xcode의 Source Control preferences 설정 탭에서 author name과 email address를 추가하고 Xcode의 Source Control 메뉴에서 새 Git repository를 만듭니다.
 
-* If you close a project with an active and published PR while in a PR view and then re-open the project quickly, Xcode may display an error dialog. (82401004)
+* PR view에 있는 동안 active 및 published PR이 있는 project를 닫은 다음 project를 빠르게 다시 열면 Xcode에서 error dialog를 display할 수 있습니다. (82401004)
 
 ## Source Editor
 ### New Features
