[Post] Source Editor - New Features 적용

--- a/ios/xcode/_posts/2021-10-01-xcode-13.md
+++ b/ios/xcode/_posts/2021-10-01-xcode-13.md
@@ -7,7 +7,6 @@ title: "Xcode 13.0"
 toc: true
 toc_sticky: true
 toc_label: 목차
-icon: "fas fa-link"
 tag: "Xcode"
 published : false
 depth:
@@ -480,25 +479,25 @@ Xcode의 Keyboard shortcuts는 이제 documentation window에 탭이 두 개 이
 
 ## Source Editor
 ### New Features
-* Xcode 13 introduces Vim key bindings, emulating a vim experience in the source editor combined with the existing editor functionality. (3716281)
+* Xcode 13은 Vim key bindings을 도입하여 기존 editor 기능과 결합된 source editor의 vim 환경을 emulating합니다. (3716281)
 
-* Enable Vim key bindings in Preferences, using the Enable Vim key bindings option in Text Editing > Editing.
+  `Text Editing > Editing`에서 Vim key bindings Enable option을 사용하여 Preferences에서 Vim 키 바인딩을 활성화합니다.
 
-* You can copy the current location of the selection in the form of “<filename>:<line-number>” to the Clipboard by choosing Edit > Copy Location. (10505001) (FB5931643)
+* `Edit > Copy Location`를 선택하여 "<filename>:<line-number>" 형식으로 선택 항목의 current location를 Clipboard에 복사할 수 있습니다. (10505001) (FB5931643)
 
-* When expanding a placeholder to a closure in Swift, code completion uses the closure’s argument names instead of <#Type#>. (53180195)
+* Swift에서 placeholder를 closure로 확장할 때 code completion은 `<#Type#>` 대신 closure의 argument names을 사용합니다. (53180195)
 
-* Swift syntax highlighting in Xcode 13 is immediate and flicker free, both while editing and navigating between files. (54536855)
+* Xcode 13의 Swift syntax highlighting 표시는 파일을 편집하고 탐색하는 동안 즉각적이고 깜박임이 없습니다. (54536855)
 
-* Swift Jump to Definition now provides a more resilient experience even when your code is incomplete or your project can’t compile.
+* 이제 Swift Jump to Definition은 코드가 불완전하거나 프로젝트를 컴파일할 수 없는 경우에도 보다 탄력적인 경험을 제공합니다.
 
-* Jump to Definition from Swift class, protocol, or method declarations also provides easy navigation to all subclasses, extensions, and protocol conforming types throughout your whole workspace. (54536865)
+  Swift class, protocol 또는 method 선언에서 Jump to Definition는 전체 workspace에서 모든 subclasses, extensions 및 protocol 준수 유형에 대한 쉬운 탐색을 제공합니다. (54536865)
 
-* Xcode 13 includes redesigned Swift code completion that maximizes reliability and performance, especially in the presence of structural and logical inconsistencies in project source code. Code completion in Xcode 13 helps you quickly finish your thoughts, even when the surrounding source is broken. Completions come up faster and are more predictive, suggesting the most likely completions after less typing. (54536896)
+* Xcode 13에는 특히 project source code에 구조적 및 논리적 불일치가 있는 경우 안정성과 성능을 극대화하는 재설계된 Swift code completion 기능이 포함되어 있습니다. Xcode 13의 코드 완성 기능은 주변 소스가 손상된 경우에도 빠르게 생각을 마무리할 수 있도록 도와줍니다. Completions은 더 빨리 나타나고 더 예측 가능하므로 입력을 줄인 후에 completions될 가능성이 가장 높습니다. (54536896)
 
-  In addition to completing types and methods, code completion in Xcode 13 offers whole statements like for item in items {, or guard let item = item else { return nil }, and even entire switch statements with accompanying enum cases. Code completion also searches across properties to offer chained completions like layer.cornerRadius, when completing cornerRadius in a view.
+  types과 methods를 완성하는 것 외에도 Xcode 13의 code completion은 `for item in items {`, 또는 `guard let item = item else { return nil }`과 같은 `switch` 문과 `enum case`가 수반되는 전체 `switch` 문을 제공합니다. 또한 Code completion은 또한 properties 전체를 검색하여 view에서 `cornerRadius`를 완료할 때 `layer.cornerRadius`와 같은 chained completions을 제공합니다.
 
-  Code completion helps you finish expressions that aren’t correct yet. It finds and identifies types in modules you haven’t imported, and automatically adds the necessary import. When the surrounding source has errors, code completion still infers what you mean. It offers the completion you’re looking for with a message describing how to make it valid.
+  Code completion은 아직 정확하지 않은 표현식을 완성하는 데 도움이 됩니다. import 되지 않은 modules의 유형을 찾아 식별하고 필요한 import를 자동으로 추가합니다. 주변 소스에 오류가 있어도 code completion은 여전히 ​​당신이 의미하는 바를 유추합니다. 유효하게 만드는 방법을 설명하는 message를 제공하는 동시에 원하는 completion을 제안합니다.
 
 ### Resolved Issues
 * Fixed an issue where URLs in comments with MARKs, TODOs, and FIXMEs weren’t clickable. (10488785)
